Fix alignment of samp elements

--- a/css/app.scss
+++ b/css/app.scss
@@ -82,7 +82,7 @@ code, samp {
 samp {
 	&.value-false, &.value-true {
 		font-size: 80%;
-		vertical-align: text-top;
+		vertical-align: middle;
 	}
 }
 
